SC-235: correct method to remove nested section spacing

--- a/source/_patterns/02-molecules/section/_section.scss
+++ b/source/_patterns/02-molecules/section/_section.scss
@@ -19,8 +19,8 @@ $_config: map-merge-by-keys($_config_schemes, base, $_config_schemes, $scheme);
 .jcc-section {
   @include u-padding-top(9);
 
-  .jcc-section {
-    &:first-child {
+  section {
+    &:first-of-type {
       @include u-padding-top(0);
     }
 
